--- a/style.css
+++ b/style.css
@@ -350,13 +350,21 @@ footer {
 #nav {
   grid-column: 1/2;
   background-color: black;
-  color: white;
+  color: grey;
   width: 12em;
   font-weight: bold;
   font-size: 1.3em;
   line-height: 3em;
   padding-top: 2vw;
   padding-left: 7vw;
+}
+
+.adm-item:hover {
+  color: white;
+}
+
+.adm-item-selected {
+  color: white !important;
 }
 
 .adm-section {
@@ -377,7 +385,7 @@ footer {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 1.6em;
+  width: 70vw;
 }
 
 ::placeholder {
@@ -406,15 +414,16 @@ footer {
   border-radius: 0em 0.2em 0.2em 0em;
   font-size: 1.3em;
   font-weight: bold;
-  vertical-align: bottom;
-  margin-right: 3em;
 }
 
 #classes-list {
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
-  margin: 3vw 5vw 5vw 12vw;
-  gap: 2em;
+  justify-content: center;
+  align-items: center;
+  margin: 3vw 5vw 5vw 5vw;
+  gap: 1vw;
 }
 
 .class {
@@ -489,6 +498,10 @@ footer {
   font-size: 1.1em;
 }
 
+#confirmation-message > h2 {
+  margin-bottom: 1em;
+}
+
 #check-mark {
   width: 3em;
   margin-top: -0.5em
@@ -516,11 +529,17 @@ footer {
   padding-right: 0;
 }
 
-#total-value, #report {
+#total-value {
+  font-weight: bold;
+  font-size: 1.8em;
+  margin-top: 5vh;
+}
+
+#total-value-sum, #report {
   font-weight: normal;
   font-size: 1.2em;
   line-height: 2em;
-  margin-top: 2vw;
+  margin-top: 1vh;
 }
 
 #student-report {
